--- a/Developer/ProgrammingGuide/paper.tex
+++ b/Developer/ProgrammingGuide/paper.tex
@@ -56,9 +56,9 @@ Version 1.7.10 for Equalizer 1.0$\alpha$ \\[\medskipamount]
 \today
 \subsection*{Contributors}
 
-Written by Stefan Eilemann.\\
-Engineering contributions by Maxim Makhinya, Jonas B\"osch, Christian
-Marten, Sarah Amsellem, Patrick Bouchaud, Philippe Robert and Robert Hauck.
+Written by Stefan Eilemann.\\ Contributions by Maxim Makhinya, Jonas B\"osch,
+Christian Marten, Sarah Amsellem, Patrick Bouchaud, Philippe Robert, Robert
+Hauck and Lucas Peetz Dulley.
 
 \subsection*{Copyright}
 
@@ -1072,7 +1072,7 @@ equalizes the load on all segments of a view.
   AG, 2008} illustrates this process. On the left side, a static
 assignment of resources to display segments is used. The right-hand
 segment has a higher load than the left-hand segment, causing
-sub-optimal performance. The configuration on the left uses a view
+sub-optimal performance. The configuration on the right uses a view
 equalizer, which assigns two GPU's to the left segment and four GPU's to
 the right segment, which leads to optimal performance for this model and
 camera position.
